--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
                                 Spaced repetition learning
                             </li>
                         </ul>
-                        <a href="pages/games/flashcards.html" class="btn btn-gold">Practice Now</a>
+                        <a href="pages/games/flashcard.html" class="btn btn-gold">Practice Now</a>
                     </div>
                 </div>
             </div>
