--- a/pages/learn.html
+++ b/pages/learn.html
@@ -47,21 +47,6 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <section class="page-header">
-        <div class="container">
-            <div class="page-header-content">
-                <nav class="breadcrumb">
-                    <a href="../index.html">Home</a>
-                    <span>/</span>
-                    <span>Learn</span>
-                </nav>
-                <h1>Start Learning</h1>
-                <p>Begin your journey into the world of Bharatanatyam mudras</p>
-            </div>
-        </div>
-    </section>
-
     <!-- Page Content -->
     <section class="page-content section">
         <div class="container">
@@ -112,11 +97,19 @@
         </div>
     </section>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-bottom" style="border-top: none; padding-top: 0;">
-                <p>2025 Mudra Academy. All rights reserved.</p>
+            <div class="footer-simple">
+                <a href="../index.html" class="footer-logo">
+                    <span>Mudra Academy</span>
+                </a>
+                <nav class="footer-nav">
+                    <a href="../index.html">Home</a>
+                    <a href="library.html">Library</a>
+                    <a href="detection-mode.html">Detection</a>
+                    <a href="../index.html#games">Games</a>
+                </nav>
+                <p class="footer-copy">&copy; 2025 Mudra Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
