--- a/pages/library.html
+++ b/pages/library.html
@@ -47,53 +47,6 @@
         </div>
     </nav>
 
-    <!-- Page Header -->
-    <section class="page-header">
-        <div class="container">
-            <div class="page-header-content">
-                <nav class="breadcrumb">
-                    <a href="../index.html">Home</a>
-                    <span>/</span>
-                    <span>Mudra Library</span>
-                </nav>
-                <h1>Asamyukta Hasta</h1>
-                <p>Single-hand gestures forming the foundation of Bharatanatyam expression</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- Library Stats -->
-    <section class="library-stats">
-        <div class="container">
-            <div class="stats-bar">
-                <div class="stat-badge">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M18 8h1a4 4 0 0 1 0 8h-1"/>
-                        <path d="M2 8h16v9a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V8z"/>
-                        <line x1="6" y1="1" x2="6" y2="4"/>
-                        <line x1="10" y1="1" x2="10" y2="4"/>
-                        <line x1="14" y1="1" x2="14" y2="4"/>
-                    </svg>
-                    <span>28 Mudras</span>
-                </div>
-                <div class="stat-badge">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <circle cx="12" cy="12" r="10"/>
-                        <path d="M12 6v6l4 2"/>
-                    </svg>
-                    <span>Single Hand</span>
-                </div>
-                <div class="stat-badge">
-                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                        <path d="M4 19.5A2.5 2.5 0 0 1 6.5 17H20"/>
-                        <path d="M6.5 2H20v20H6.5A2.5 2.5 0 0 1 4 19.5v-15A2.5 2.5 0 0 1 6.5 2z"/>
-                    </svg>
-                    <span>Natyashastra</span>
-                </div>
-            </div>
-        </div>
-    </section>
-
     <!-- Search & Filter -->
     <section class="library-controls">
         <div class="container">
@@ -651,13 +604,9 @@
 
                 <!-- 25. Sandamsha -->
                 <article class="mudra-card" data-mudra="sandamsha" data-keywords="pincers catching gripping tension">
-                    <div class="mudra-card-image no-image">
+                   <div class="mudra-card-image">
                         <span class="mudra-number">25</span>
-                        <div class="image-placeholder">
-                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5">
-                                <path d="M4 16l4.586-4.586a2 2 0 012.828 0L16 16m-2-2l1.586-1.586a2 2 0 012.828 0L20 14m-6-6h.01M6 20h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"/>
-                            </svg>
-                        </div>
+                        <img src="../assets/images/Mudras/Sandamsha.jpg" alt="Sandamsha Mudra - Pincers gesture" loading="lazy">
                     </div>
                     <div class="mudra-card-content">
                         <div class="mudra-card-header">
@@ -763,11 +712,19 @@
         </svg>
     </button>
 
-    <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <div class="footer-bottom" style="border-top: none; padding-top: 0;">
-                <p>2025 Mudra Academy. All rights reserved.</p>
+            <div class="footer-simple">
+                <a href="../index.html" class="footer-logo">
+                    <span>Mudra Academy</span>
+                </a>
+                <nav class="footer-nav">
+                    <a href="../index.html">Home</a>
+                    <a href="library.html">Library</a>
+                    <a href="detection-mode.html">Detection</a>
+                    <a href="../index.html#games">Games</a>
+                </nav>
+                <p class="footer-copy">&copy; 2025 Mudra Academy. All rights reserved.</p>
             </div>
         </div>
     </footer>
