Added Double hand Mudras

--- a/pages/games/flashcard.html
+++ b/pages/games/flashcard.html
@@ -1160,7 +1160,30 @@
             { name: "Hamsapaksha", image: "Hamsapaksa.jpg", hint: "Swan wing - Fingers spread sideways", translation: "Swan Wing" },
             { name: "Mukula", image: "Mukula.jpg", hint: "Bud - All fingertips touch together", translation: "Bud" },
             { name: "Tamrachuda", image: "Tamracuda.jpg", hint: "Rooster - Ring finger bent", translation: "Rooster Crest" },
-            { name: "Trishula", image: "Trisula.jpg", hint: "Trident - Three fingers extended upward", translation: "Trident" }
+            { name: "Trishula", image: "Trisula.jpg", hint: "Trident - Three fingers extended upward", translation: "Trident" },
+            // Samyukta Hasta (Double-Hand) Mudras
+            { name: "Anjali", image: "Anjali.jpg", hint: "Greeting - Both palms joined together", translation: "Salutation" },
+            { name: "Kapota", image: "Kapota.jpg", hint: "Dove - Palms together with fingers interlocked", translation: "Dove" },
+            { name: "Karkata", image: "Karkata.jpg", hint: "Crab - Fingers interlocked, palms apart", translation: "Crab" },
+            { name: "Svastika", image: "Svastika.jpg", hint: "Auspicious - Wrists crossed, palms facing out", translation: "Auspicious Cross" },
+            { name: "Dola", image: "Dola.jpg", hint: "Swing - Both hands in Pataka, swinging down", translation: "Swing" },
+            { name: "Puspaputa", image: "Puspaputa.jpg", hint: "Flower basket - Cupped hands together", translation: "Flower Basket" },
+            { name: "Utsanga", image: "Utsanga.jpg", hint: "Embrace - Arms crossed over chest", translation: "Embrace" },
+            { name: "Sivalinga", image: "Sivalinga.jpg", hint: "Shiva symbol - Fist inside cupped hand", translation: "Shiva Linga" },
+            { name: "Katva", image: "Katva.jpg", hint: "Mat weaving - Fingers crossed horizontally", translation: "Mat/Weaving" },
+            { name: "Kartarisvastika", image: "Kartarisvastika.jpg", hint: "Crossed scissors - Both Kartarimukha crossed", translation: "Scissor Cross" },
+            { name: "Garuda", image: "Garuda.jpg", hint: "Eagle - Thumbs interlocked, fingers spread", translation: "Eagle" },
+            { name: "Nagabandha", image: "Nagabandha.jpg", hint: "Serpent bond - Wrists crossed with Sarpashirsha", translation: "Serpent Bond" },
+            { name: "Katakavardhana", image: "Katakavardhana.jpg", hint: "Growing bracelet - Both hands in Katakamukha", translation: "Link of Prosperity" },
+            { name: "Bherunda", image: "Bherunda.jpg", hint: "Pair of birds - Both hands showing two-headed bird", translation: "Terrible/Formidable" },
+            { name: "Kilaka", image: "Kilaka.jpg", hint: "Bond/Link - Little fingers interlocked", translation: "Bond" },
+            { name: "Matsya", image: "Matsya.jpg", hint: "Fish - Palms together, thumbs extended as fins", translation: "Fish" },
+            { name: "Kurma", image: "Kurma.jpg", hint: "Tortoise - Hands curved over each other", translation: "Tortoise" },
+            { name: "Varaha", image: "Varaha.jpg", hint: "Boar - Hands crossed showing boar face", translation: "Boar" },
+            { name: "Chakra", image: "Chakra.jpg", hint: "Wheel - Fingers interlaced forming circle", translation: "Disc/Wheel" },
+            { name: "Sakata", image: "Sakata.jpg", hint: "Cart - Both hands in Shikhara", translation: "Cart/Carriage" },
+            { name: "Pasa", image: "Pasa.jpg", hint: "Noose - Index fingers interlocked", translation: "Noose" },
+            { name: "Sankha", image: "Sankha.jpg", hint: "Conch - Thumb enclosed by other hand", translation: "Conch Shell" }
         ];
 
         // Game State
