--- a/pages/games/quiz.html
+++ b/pages/games/quiz.html
@@ -1240,6 +1240,91 @@
                 options: ["Katakamukha", "Kapitta", "Hamsasya", "Sandamsha"],
                 correct: 0,
                 explanation: "Katakamukha ('Bracelet link') is used for delicate tasks like tying garlands or wearing ornaments."
+            },
+            // Additional Samyukta Hasta (Double-Hand) Questions
+            {
+                question: "Kapota Mudra represents:",
+                options: ["Eagle", "Dove and acceptance", "Swan", "Parrot"],
+                correct: 1,
+                explanation: "Kapota Mudra symbolizes a dove and represents acceptance or agreement."
+            },
+            {
+                question: "Which mudra is formed by interlocking both little fingers?",
+                options: ["Kilaka", "Karkata", "Katva", "Svastika"],
+                correct: 0,
+                explanation: "Kilaka Mudra interlocks the little fingers, representing a bond or connection."
+            },
+            {
+                question: "Kurma Mudra represents which animal?",
+                options: ["Crab", "Fish", "Tortoise", "Boar"],
+                correct: 2,
+                explanation: "Kurma Mudra represents a tortoise, one of Vishnu's avatars."
+            },
+            {
+                question: "Which mudra represents Vishnu's discus weapon?",
+                options: ["Sankha", "Chakra", "Pasa", "Sakata"],
+                correct: 1,
+                explanation: "Chakra Mudra represents the divine discus, one of Vishnu's four symbols."
+            },
+            {
+                question: "Varaha Mudra represents which of Vishnu's avatars?",
+                options: ["Fish", "Tortoise", "Boar", "Dwarf"],
+                correct: 2,
+                explanation: "Varaha Mudra represents the boar avatar of Lord Vishnu."
+            },
+            {
+                question: "Which mudra is used to represent a conch shell?",
+                options: ["Chakra", "Pasa", "Sankha", "Sakata"],
+                correct: 2,
+                explanation: "Sankha Mudra represents the conch shell, a sacred symbol in Hindu traditions."
+            },
+            {
+                question: "Nagabandha Mudra represents:",
+                options: ["Eagle bond", "Serpent intertwining", "Fish swimming", "Bird flying"],
+                correct: 1,
+                explanation: "Nagabandha represents serpents intertwining, showing the bond of snakes."
+            },
+            {
+                question: "Which mudra represents embracing or hugging?",
+                options: ["Dola", "Utsanga", "Anjali", "Kapota"],
+                correct: 1,
+                explanation: "Utsanga Mudra represents an embrace with arms crossed over the chest."
+            },
+            {
+                question: "Dola Mudra represents:",
+                options: ["A wheel", "A swing", "A cart", "A noose"],
+                correct: 1,
+                explanation: "Dola Mudra represents a swing, with both hands in Pataka swinging down."
+            },
+            {
+                question: "Which mudra is formed by crossing wrists with both hands in Kartarimukha?",
+                options: ["Svastika", "Kartarisvastika", "Karkata", "Nagabandha"],
+                correct: 1,
+                explanation: "Kartarisvastika is formed by crossing both hands showing Kartarimukha."
+            },
+            {
+                question: "Sakata Mudra represents:",
+                options: ["A boat", "A cart or carriage", "A wheel", "A noose"],
+                correct: 1,
+                explanation: "Sakata Mudra represents a cart or carriage, formed with both hands in Shikhara."
+            },
+            {
+                question: "Pasa Mudra represents:",
+                options: ["A chain", "A noose or rope", "A net", "A web"],
+                correct: 1,
+                explanation: "Pasa Mudra represents a noose, often associated with Lord Yama."
+            },
+            {
+                question: "Which double-hand mudra represents 'Link of Prosperity'?",
+                options: ["Kilaka", "Karkata", "Katakavardhana", "Katva"],
+                correct: 2,
+                explanation: "Katakavardhana, formed with both hands in Katakamukha, represents growing prosperity."
+            },
+            {
+                question: "Katva Mudra is associated with:",
+                options: ["Weaving or mat making", "Flower offering", "Greeting", "Fighting"],
+                correct: 0,
+                explanation: "Katva Mudra represents mat weaving with fingers crossed horizontally."
             }
         ];
 
