Added Double hand Detection

--- a/pages/detection-mode.html
+++ b/pages/detection-mode.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Choose your mudra detection mode - practice with AI-powered real-time detection">
     <title>Detection Mode - Mudra Academy</title>
-    
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Playfair+Display:wght@600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/pages.css">
-    
+
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'%3E%3Crect fill='%238B2942' width='100' height='100' rx='20'/%3E%3Ctext x='50' y='65' font-size='50' text-anchor='middle' fill='%23D4A84B' font-family='serif'%3EM%3C/text%3E%3C/svg%3E">
 
     <style>
@@ -94,11 +94,10 @@
             <ul class="nav-links">
                 <li><a href="../index.html#features">Features</a></li>
                 <li><a href="../index.html#games">Games</a></li>
-                <li><a href="detection-mode.html" class="active">Live Detection</a></li>
                 <li><a href="library.html">Library</a></li>
             </ul>
             <div class="nav-cta">
-                <a href="learn.html" class="btn btn-primary">Start Learning</a>
+                <a href="detection-mode.html" class="btn btn-primary">Live Detection</a>
             </div>
             <button class="mobile-menu-btn" aria-label="Toggle menu">
                 <span></span>
@@ -111,7 +110,7 @@
     <section class="page-content section">
         <div class="container">
             <div class="mode-grid">
-                <a href="live-detection.html?mode=single" class="mode-card">
+                <a href="live-detection.html" class="mode-card">
                     <div class="mode-image">
                         <img src="../assets/images/Mudras/Pataka.jpg" alt="Single Hand Mudra Example">
                     </div>
@@ -119,13 +118,13 @@
                     <p>Practice single-hand mudras with real-time AI detection</p>
                     <span class="mode-badge">28 Mudras</span>
                 </a>
-                <a href="live-detection.html?mode=double" class="mode-card">
+                <a href="double-hand-detection.html" class="mode-card">
                     <div class="mode-image">
                         <img src="../assets/images/Mudras/Kartarisvastika.jpg" alt="Double Hand Mudra Example">
                     </div>
                     <h3>Double Hand Mudras</h3>
-                    <p>Practice double-hand mudras with combined gestures</p>
-                    <span class="mode-badge">Coming Soon</span>
+                    <p>Practice double-hand mudras with YOLO-based detection</p>
+                    <span class="mode-badge">6 Mudras</span>
                 </a>
             </div>
         </div>
