--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
             <ul class="nav-links">
                 <li><a href="#features">Features</a></li>
                 <li><a href="#games">Games</a></li>
-                <li><a href="#webcam">Live Detection</a></li>
                 <li><a href="pages/library.html">Library</a></li>
             </ul>
             
             <div class="nav-cta">
-                <a href="pages/detection-mode.html" class="btn btn-primary">Start Learning</a>
+                <a href="pages/detection-mode.html" class="btn btn-primary">Live Detection</a>
             </div>
             
             <button class="mobile-menu-btn" aria-label="Toggle menu">
