Changed double hand yolo model and code to run it

--- a/pages/double-hand-detection.html
+++ b/pages/double-hand-detection.html
@@ -366,12 +366,14 @@
                             Supported Mudras
                         </h3>
                         <div class="supported-mudras">
+                            <span class="mudra-tag">Anjali</span>
+                            <span class="mudra-tag">Naagabandha</span>
                             <span class="mudra-tag">Chakra</span>
                             <span class="mudra-tag">Karkota</span>
                             <span class="mudra-tag">Katariswastika</span>
-                            <span class="mudra-tag">Nagabandha</span>
                             <span class="mudra-tag">Pasha</span>
                             <span class="mudra-tag">Shanka</span>
+                            <span class="mudra-tag">Shivalinga</span>
                         </div>
                     </div>
                 </aside>
@@ -407,12 +409,14 @@
 
         // Double-hand mudra meanings (matching trained model class names)
         var meanings = {
+            'Anjali': 'Salutation - Palms joined in prayer position',
+            'Naagabandha': 'Serpent bond - Intertwined snakes',
             'Chakra': 'Disc/Wheel - Vishnu\'s divine weapon',
             'Karkota': 'Crab - Interlocked fingers showing strength',
             'Katariswastika': 'Scissor cross - Separation, difference',
-            'Nagabandha': 'Serpent bond - Intertwined snakes',
             'Pasha': 'Noose - Rope or binding',
-            'Shanka': 'Conch shell - Sacred symbol'
+            'Shanka': 'Conch shell - Sacred symbol',
+            'Shivalinga': 'Shiva\'s symbol - Sacred emblem of Lord Shiva'
         };
 
         var $ = function(id) { return document.getElementById(id); };
