--- a/pages/detection-mode.html
+++ b/pages/detection-mode.html
@@ -136,8 +136,8 @@
                         <img src="../assets/images/Mudras/Kartarisvastika.jpg" alt="Double Hand Mudra Example">
                     </div>
                     <h3>Double Hand Mudras</h3>
-                    <p>Practice double-hand mudras with YOLO-based detection (Offline)</p>
-                    <span class="mode-badge">8 Mudras · Offline</span>
+                    <p>Practice double-hand mudras with YOLO-based detection</p>
+                    <span class="mode-badge">8 Mudras</span>
                 </a>
                 <a href="ghost-mode.html" class="mode-card">
                     <div class="mode-image">
