--- a/pages/games/quiz.html
+++ b/pages/games/quiz.html
@@ -1347,7 +1347,7 @@
         function enterFullscreen() {
             const elem = document.documentElement;
             if (elem.requestFullscreen) {
-                elem.requestFullscreen().catch(err => console.log('Fullscreen not available'));
+                elem.requestFullscreen().catch(err => {});
             } else if (elem.webkitRequestFullscreen) {
                 elem.webkitRequestFullscreen();
             } else if (elem.msRequestFullscreen) {
@@ -1358,7 +1358,7 @@
         function exitFullscreen() {
             if (document.fullscreenElement || document.webkitFullscreenElement) {
                 if (document.exitFullscreen) {
-                    document.exitFullscreen().catch(err => console.log('Exit fullscreen failed'));
+                    document.exitFullscreen().catch(err => {});
                 } else if (document.webkitExitFullscreen) {
                     document.webkitExitFullscreen();
                 }
