--- a/pages/double-hand-detection.html
+++ b/pages/double-hand-detection.html
@@ -531,7 +531,7 @@
             // =================================================================
             // CONFIGURATION - SIMPLE AND FAST
             // =================================================================
-            const MODEL_PATH = '../ml/models/new/best.onnx';
+            const MODEL_PATH = '../ml/models/double.onnx';
             const CLASSES = ['Anjali', 'MATSYA', 'Naagabandha', 'SVASTIKA', 'berunda', 'chakra', 'garuda', 'karkota', 'katariswastika', 'pasha', 'pushpantha', 'shanka', 'shivalinga'];
             const CONF_THRESHOLD = 0.35;  // Detection threshold
 
